@@ -6,6 +6,7 @@ OUTPUT_DIRECTORY=
 CREATE_SUBDIRS=NO
 ALLOW_UNICODE_NAMES=NO
 OUTPUT_LANGUAGE=English
+EXCLUDE_PATTERNS=moc_*
 BRIEF_MEMBER_DESC=NO
 REPEAT_BRIEF=NO
 ALWAYS_DETAILED_SEC=NO
@@ -160,3 +161,4 @@ DOT_TRANSPARENT=YES
 DOT_MULTI_TARGETS=YES
 GENERATE_LEGEND=YES
 DOT_CLEANUP=YES
+
