@@ -44,8 +44,6 @@ int main (int argc, char **argv)
 	QApplication		app(argc,argv);
 	QPixmap			pixmap(DATADIR "/pixmaps/KKEditQT.png");
 
-//    QSplashScreen	splash(pixmap,Qt::FramelessWindowHint|Qt::X11BypassWindowManagerHint);
-
 	app.setStyleSheet("QMenu { menu-scrollable: true ;}");
 	app.setOrganizationName("KDHedger");
 	app.setApplicationName("KKEditQT");
@@ -117,6 +115,8 @@ int main (int argc, char **argv)
 	delete kkedit;
 	return status;
 }
+
+
 
 
 
